fix input wrap (test)

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,6 @@
   font-display: block;
 }
 
-
 @media (any-hover: hover) {
   .card:hover ~ * > .card__image {
     scale: 1.2;
@@ -104,6 +103,7 @@
     text-decoration: underline;
   }
 }
+
 .webp .main-block { background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), color-stop(39.9%, rgba(0, 0, 0, 0))), -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.3))), url(../img/background.webp) lightgray 50%/cover no-repeat; background: linear-gradient(180deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0) 39.9%), linear-gradient(0deg, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.3) 100%), url(../img/background.webp) lightgray 50%/cover no-repeat; }
 
 .webp .review__photo_1 { background: url(../img/reviews/review_1.webp) lightgray -21.313px 0px/149.953% 100% no-repeat; background-size: cover; background-position: center; }
@@ -573,6 +573,14 @@ body {
   gap: 32px 33px;
 }
 
+.form-create__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 30px;
+  width: 100%;
+}
+
 .form-create__item {
   position: relative;
   -webkit-box-flex: 0;
@@ -602,6 +610,7 @@ body {
   height: 68px;
   color: #1B1F2B;
   background-color: #F9F7F4;
+  outline: 1px solid #F4F0E9;
   border-radius: 10px;
   padding: 20px;
   font-size: 20px;
@@ -1176,6 +1185,10 @@ body {
     gap: 32px 20px;
   }
 
+  .form-create__row {
+    gap: 20px;
+  }
+
   .form-create__item {
     -webkit-box-flex: 0;
         -ms-flex: 0 1 48.7%;
@@ -1423,6 +1436,12 @@ body {
 
   .form-create__body {
     padding: 21px 20px 20px;
+    gap: 29.7px;
+  }
+
+  .form-create__row {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     gap: 29.7px;
   }
 
